<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:stretchColumns="1">

        <TableRow
            android:id="@+id/nameTableRow"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/nameLabelTextView"
                android:text="@string/label_name" />

            <TextView android:id="@+id/nameTextView" />
        </TableRow>

        <TableRow
            android:id="@+id/phoneTableRow"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/phoneLabelTextView"
                android:text="@string/label_phone" />

            <TextView android:id="@+id/phoneTextView" />
        </TableRow>

        <TableRow
            android:id="@+id/emailTableRow"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/emailLabelTextView"

                android:text="@string/label_email" />

            <TextView android:id="@+id/emailTextView" />
        </TableRow>

        <TableRow
            android:id="@+id/streetTableRow"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/streetLabelTextView"
                android:text="@string/label_street" />

            <TextView android:id="@+id/streetTextView" />
        </TableRow>

        <TableRow
            android:id="@+id/cityTableRow"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/cityLabelTextView"
                android:text="@string/label_city" />

            <TextView android:id="@+id/cityTextView" />
        </TableRow>
    </TableLayout>
</ScrollView>
